syntax = "proto3";
package telemetry;

option go_package = "github.com/diogo464/ipfs_telemetry/pkg/proto/common";

message AddrInfo {
    string id               = 1;
    repeated string addrs   = 2;
}
